# orbital-compute

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PAPERS.md  README.md  REPRODUCIBILITY.md  SHOW_HN.md  benchmark.py  dashboard.html  dashboard.py  demo.py  pyproject.toml  run_sim.py  setup.py
docs/: api-docs.html  cost.html  dashboard.html  designer.html  globe.html  index.html  pipeline.html
examples/: README.md  constrained_power_6sat_6h.json  dashboard_6sat_6h.html  default_6sat_6h.json  full_stack_demo.json  large_constellation_24sat_12h.json  medium_constellation_12sat_24h.json  real_starlink_demo.py  scheduler_benchmark.json  small_constellation_4sat_3h.json  tutorial_ai_inference.py  tutorial_defense_isr.py  tutorial_earth_observation.py
k8s/: deployment.yaml  example-pod.yaml  scheduler-config.yaml
orbital_compute/: __init__.py  __main__.py  api.py  cgr.py  cli.py  constellations.py  cost_model.py  data_pipeline.py  debris.py  designer.py  federated.py  formats.py  ground_stations.py  isl.py  k8s_scheduler.py  mission_planner.py  network.py  orbit.py  phoenix.py  power.py  propulsion.py  radiation.py  reliability.py  scheduler.py  scheduler_v2.py  simulator.py  standards.py  thermal.py  visualize.py  workloads.py
tests/: test_academic.py  test_api.py  test_constellations.py  test_core.py  test_cost_model.py  test_data_pipeline.py  test_designer.py  test_formats.py  test_isl.py  test_k8s_scheduler.py  test_mission_planner.py  test_network.py  test_new_modules.py  test_reliability.py  test_scheduler_v2.py  test_standards.py  (+1 more)
(+14 files in other folders)
